--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Video Game Sales and Metacritic Scores</title>
+    <style>
+      .indented {
+        padding-left: 30px;
+      }
+    </style>
   </head>
   <body>
     <header>
@@ -293,6 +298,66 @@
       </p>
 
       <section id="conclusion"></section>
+      <h2>4. Conclusion</h2>
+      <p>
+        In this project, I analyzed three aspects of video game sales: the
+        publisher, the release date, and how a game’s sales and review scores
+        influence each other. In summary, from the analysis questions presented
+        in my proposal, I found the following results.
+      </p>
+      <p class="indented">
+        1. Is there a strong correlation between a game’s review score and its
+        sales? Is the meta score or the user score a better predictor of a
+        game’s sales?
+      </p>
+      <p class="indented">
+        There is limited correlation between review scores and sales. But while
+        the correlation isn’t very strong, it does appear meta score is a better
+        predictor of sales than the user score.
+      </p>
+      <p class="indented">
+        2. Have the total sales of games seen an increase over the years?
+      </p>
+      <p class="indented">
+        There is some correlation between release date and number of games
+        released, but it is not especially strong. There was a peak in the
+        number of games released around 2010 but since there has been a decline.
+      </p>
+      <p class="indented">
+        3. Which publishers have had the highest sales over the past ten years?
+        Is there a difference between those with high sales in North America and
+        those with high total sales?
+      </p>
+      <p class="indented">
+        The top ten publishers are listed above in Table 3. The same ten
+        publishers are present in both total sales and North American sales,
+        just in a different order. Nintendo is solidly in first place with 1.9
+        billion games sold followed by Activision at number two with 727 million
+        units sold. North American sales accounts for 40 – 60% of total sales
+        making this region a significant contributor to sales success for game
+        publishers.
+      </p>
+      <p class="indented">
+        4. Is the console on which a game is released strongly correlated to its
+        ratings? Specifically, are there certain video game consoles that have
+        the highest average ratings of games?
+      </p>
+      <p class="indented">
+        The variables needed to answer this question were not present in the
+        collected data. As noted below, this question would be an opportunity
+        for further work on this project.
+      </p>
+      <p>
+        This project has several limitations, including the lack of review
+        scores for games released before the mid-90s, the improper release dates
+        of some games, and the lack of information about the video game
+        consoles. Future work on this project could include finding more sources
+        to create a more complete dataset, analyzing the purchase of different
+        video game consoles to see if the spikes in new video game releases
+        coincide with more people buying video game consoles, and analyzing
+        whether more time in between game releases for a publisher really means
+        a better game (higher sales and review scores).
+      </p>
     </main>
     <footer></footer>
   </body>
