--- a/index.html
+++ b/index.html
@@ -160,6 +160,26 @@
         meta score has a slightly better correlation with sales than the user
         score.
       </p>
+      <figure>
+        <img
+          src="images/1-scores_boxplot.png"
+          alt="Boxplots comparing meta score and user score"
+          width="600"
+          height="400"
+        />
+        <figcaption>Figure 1 Review Scores Boxplots</figcaption>
+      </figure>
+
+      <figure>
+        <img
+          src="images/2-review_scores_histogram.png"
+          alt="Histogram reviewing meta score and user score"
+          width="600"
+          height="400"
+        />
+        <figcaption>Figure 1 Review Score Histograms</figcaption>
+      </figure>
+
       <p>
         The meta score is a better predictor of sales than the user score. While
         the correlation isn’t very strong, it does exist. There is some basis
@@ -201,6 +221,19 @@
         between the two variables would be useful to analyze the data further.
         The scatterplot can be seen in Figure 3 below.
       </p>
+      <figure>
+        <img
+          src="images/3-total_sales_number_games_released.jpg"
+          alt="Scatterplot of number of games and total sales"
+          width="600"
+          height="400"
+        />
+        <figcaption>
+          Figure 3 Scatterplot of the number of games by a publisher and their
+          total sales
+        </figcaption>
+      </figure>
+
       <p>
         This correlation does not apply to the number of games released and the
         publisher’s average meta score. The correlation coefficient between
@@ -216,6 +249,18 @@
         below the average. This can also be seen in Figure 4, a scatterplot of
         the number of games released and the meta score.
       </p>
+      <figure>
+        <img
+          src="images/4-metascore_number_games_released.jpg"
+          alt="Scatterplot of number of games by publisher and meta score"
+          width="600"
+          height="400"
+        />
+        <figcaption>
+          Figure 4 Scatterplot of the number of games by a publisher and meta
+          score
+        </figcaption>
+      </figure>
       <p>
         I compared the top ten game publishers by North American sales and by
         total sales for the past ten years. I wanted to know if there is there a
@@ -249,6 +294,17 @@
         between the number of games released and total sales. This scatterplot
         can be seen in Figure 5.
       </p>
+      <figure>
+        <img
+          src="images/5-number_of_games_released_and_total_sales_by_month.png"
+          alt="Comparing two scatterplots of games release and total sales by month in relation to release date"
+          width="600"
+          height="400"
+        />
+        <figcaption>
+          Figure 5 Number of Games Released and Total Sales by Month
+        </figcaption>
+      </figure>
       <p>
         The point at the end should be ignored, as it includes two games yet to
         be released. The outlier of games released in 2020 should also be
@@ -273,6 +329,15 @@
         date, which has a correlation coefficient of .229. Figure 6 shows a
         graph comparing the sales to the release date.
       </p>
+      <figure>
+        <img
+          src="images/6-total_sales_by_release_date.jpg"
+          alt="Sales of Video Games over Time"
+          width="600"
+          height="400"
+        />
+        <figcaption>Figure 6 Total Sales by Release Date</figcaption>
+      </figure>
       <p>
         The trend of frequent outliers appears to be much greater for total
         sales than it is for North American sales. Taking a slice_max of both
@@ -296,6 +361,15 @@
         after 2010 can partially explain the strong correlation value between
         the meta score and the total sales of a game.
       </p>
+      <figure>
+        <img
+          src="images/7-review_scores_by_release_date.jpg"
+          alt="Rating of Video Games Over Time"
+          width="600"
+          height="400"
+        />
+        <figcaption>Figure 7 Review Scores by Release Date</figcaption>
+      </figure>
 
       <section id="conclusion"></section>
       <h2>4. Conclusion</h2>
