--- a/index 2.html
+++ b/index 2.html
@@ -15,14 +15,7 @@
     <header>
       <h1>Video Game Sales and Metacritic Scores</h1>
     </header>
-    <nav>
-      <ul>
-        <li><a href="#introduction">Introduction</a></li>
-        <li><a href="#data">Data</a></li>
-        <li><a href="#analysis">Analysis</a></li>
-        <li><a href="#conclusion">Conclusion</a></li>
-      </ul>
-    </nav>
+    <nav></nav>
     <main>
       <section id="introduction"></section>
       <h2>1. Introduction</h2>
