--- a/index.html
+++ b/index.html
@@ -683,6 +683,6 @@
         a better game (higher sales and review scores).
       </p>
     </main>
-    <footer></footer>
+    <footer>&copy; Matt Colbert and Mike Colbert</footer>
   </body>
 </html>
